--- a/assets/scss/styles/_rte.scss
+++ b/assets/scss/styles/_rte.scss
@@ -1,5 +1,23 @@
 /* rich text */
 .rte {
+
+    /*
+ * Give every element, except the first,
+ * in an article a margin top.
+
+article * + * {
+    margin-top: 1rem;
+  }
+  */
+  /*
+   * Give h1, h2 and h3 elements, except the first,
+   * a bigger margin top.
+ 
+  article * + :is(h1,h2,h3) {
+    margin-top: 2.5rem;
+  } */
+
+
     h2{
         margin-bottom: 15px;
     }
