--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -11,6 +11,7 @@
 
 //modules
 @import "modules/rgpd";
+@import "modules/slider";
 
 //blocks
 @import "blocks/footer";
@@ -30,7 +31,7 @@
 //strates
 @import "strates/image";
 @import "strates/wysiwyg";
-
+@import "strates/news";
 
 //pages
 @import "pages/actualities";
