--- a/assets/scss/cards/_article.scss
+++ b/assets/scss/cards/_article.scss
@@ -1,5 +1,14 @@
 .card-article{
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 
+    picture{
+        width: 100%;
+    }
     img{
         width: 100%;
         height: auto;
