--- a/assets/scss/styles/_variables.scss
+++ b/assets/scss/styles/_variables.scss
@@ -26,6 +26,7 @@ $breakpoint-sm-up: "(min-width: 576px)";
 $breakpoint-md-up: "(min-width: 769px)";
 $breakpoint-lg-up: "(min-width: 992px)";
 $breakpoint-xlg-up: "(min-width: 1200px)";
+$breakpoint-fluid-up: "(min-width: 1400px)";
 $breakpoint-wd-up: "(min-width: 1650px)";
 
 /* breakpoint desktop first */
@@ -38,7 +39,7 @@ $breakpoint-wd-down: "(max-width: 1649px)";
 @media #{$breakpoint-lg-down} {
     :root {
         --ctr-offset: 20px;
-        --gap: 40px;
+        --gap: 20px;
         --header-height: 40px;
     }
 }
@@ -46,7 +47,7 @@ $breakpoint-wd-down: "(max-width: 1649px)";
 @media #{$breakpoint-lg-up} {
     :root {
         --ctr-offset: 60px;
-        --gap: 80px;
+        --gap: 40px;
         --header-height: 80px;
     }
 }
