--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -32,6 +32,7 @@
 @import "strates/image";
 @import "strates/wysiwyg";
 @import "strates/news";
+@import "strates/sliders";
 
 //pages
 @import "pages/actualities";
