--- a/web/wp-content/plugins/easy-static/styles.css
+++ b/web/wp-content/plugins/easy-static/styles.css
@@ -243,3 +243,33 @@
         }
     }
 }
+
+.es-notice {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    background-color: #d636381f;
+    border: 1px solid #d63638;
+    border-left-width: 4px;
+    padding: 1px 12px;
+
+}
+
+.es-notice:before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border: none;
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
+    -webkit-mask-image: url("img/alert.svg");
+    mask-image: url("img/alert.svg");
+    background: #d63638;
+}
